<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res/android">

    <string name="app_name">Just Record</string>
    <string name="title_section1">Record</string>
    <string name="title_section2">Saved</string>
    <string name="title_section3">About</string>
    <string name="title_activity_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Record Screen Strings -->
    <string name="record_textView_timer_initial">00:00</string>
    <string name="record_chronometer_initial_format">Initial format:<xliff:g id="initial-format">%</xliff:g></string>
    <string name="record_button_cancel">CANCEL</string>
    <string name="record_button_finish">FINISH</string>
    <string name="record_button_record">RECORD</string>
    <string name="record_button_continue">CONTINUE</string>

    <!-- Saved Screen Strings -->
    <string name="saved_button_filter_date_title">DATE</string>
    <string name="saved_button_filter_name_title">NAME</string>
    <string name="saved_button_filter_length_title">LENGTH</string>
    <string name="saved_button_filter_size_title">SIZE</string>
    <string name="saved_button_filter_type_title">TYPE</string>
    <string name="saved_action_delete">Delete</string>
    <string name="saved_action_edit">Edit</string>
    <string name="saved_action_share">Share</string>
    <string name="saved_action_settings">Settings</string>
    <string name="saved_action_sort_date">Sort by Date</string>
    <string name="saved_action_sort_name">Sort by Name</string>
    <string name="saved_action_sort_size">Sort by Size</string>
    <string name="saved_action_sort_type">Sort by Type</string>
    <string name="saved_textView_info">Tap to play a recording.\nLong press for more options.\n\n\nNo recordings.\nPress the record button to start.</string>

</resources>
