<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ListView android:id="@+id/saved_listView_list"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:listSelector="@drawable/list_item_saved_selector"
            android:divider="@color/saved_button_background"
            android:dividerHeight="1dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@android:color/transparent">
        <Button
            android:id="@+id/saved_button_filter_date"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/saved_button_filter_date_title"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:background="@drawable/saved_button_filter_selector"
            android:onClick=""/>
        <Space
            android:layout_height="match_parent"
            android:layout_width="1dp"/>
        <Button
            android:id="@+id/saved_button_filter_name"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/saved_button_filter_name_title"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:background="@drawable/saved_button_filter_selector"/>
        <Space
            android:layout_height="match_parent"
            android:layout_width="1dp"/>
        <Button
            android:id="@+id/saved_button_filter_type"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/saved_button_filter_type_title"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:background="@drawable/saved_button_filter_selector"/>
        <!--<Button-->
            <!--android:id="@+id/saved_button_filter_length"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/saved_button_filter_length_title"-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="12sp"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:background="@drawable/saved_button_filter_selector"/>-->
        <Space
            android:layout_height="match_parent"
            android:layout_width="1dp"/>
        <Button
            android:id="@+id/saved_button_filter_size"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/saved_button_filter_size_title"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:background="@drawable/saved_button_filter_selector"/>
    </LinearLayout>
</LinearLayout>